# mtw-backend

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ruff.yml
app/: config.py  main.py
app/agents/: base.py  emoji.py
app/api/v1/: __init__.py  chat.py  health.py
app/graph/: main_graph.py  nodes.py  state.py
app/llms/: llm_demo.py  local.py  local_llms.py  manager.py
app/llms/demos/: ollama.py
app/logging/: __init__.py  config.py
app/schemas/: chat.py
